# etsi-failprint

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  dashboard.py  pyproject.toml  requirements.txt  setup.cfg  streamlit_app.py
docs/: getting_started.md
etsi/failprint/: __init__.py  cluster.py  core.py  correlate.py  counterfactuals.py  cv_embedder.py  cv_features.py  data_validation.py  explain.py  nlp.py  nlp_features.py  report.py  segmenter.py  utils.py  visualizations.py
etsi/failprint/reports/: failprint_nlp_report.md
etsi/failprint/templates/: failprint_report.html
etsi_failprint.egg-info/: PKG-INFO  SOURCES.txt
examples/: demo_counterfactuals.py  iris_pipeline.py  nlp_sentiment.py  run_cv_analysis.py  test_cv_embeddings.py  titanic_shap_workflow.py  titanic_workflow.py  wine_random_forest.py
reports/: failprint_report.html  failprint_report.md
test/: failprint_v1.py  test_failprint_v1.py
tests/: test_suite.py
