[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etsi-failprint"
version = "0.1.2"
description = "Automated failure pattern detection and root-cause analysis for ML workflows"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="etsi", email="etsi.hq@gmail.com" }
]
license = { text = "BSD-2-Clause" }
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "shap",
  "tabulate"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
] 
keywords = [
  "MLOps", "failure-analysis", "diagnostics", "model-monitoring", "debugging", "root-cause"
]
urls = {
  "Homepage"    = "https://github.com/etsi-ai/etsi-failprint",
  "Repository"  = "https://github.com/etsi-ai/etsi-failprint",
  "Bug Tracker" = "https://github.com/etsi-ai/etsi-failprint/issues"
}
[tool.setuptools.packages.find]
include = ["etsi", "etsi.*"]
